container alignment fixed

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -116,6 +116,6 @@
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
     #navbar {
-        padding: 16px 68px;
+        padding: 16px 55px;
     }
 }
